--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </section> -->
           <section id="animations-to-data">
             <h3>
-              <a href="https://pencilcode.net/edit/first" target="_blank">
+              <a href="https://scratch.mit.edu/projects/10128368/editor/" target="_blank">
                 programmer les animations
               </a>
             <h3>
